force-app/main/default/objects/Email_Domain__c.object
<CustomObject>
    <description>An object to house common email domains and client domains.</description>
    <fields>
        <fullName>Account_Billing_Country__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <label>Account Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_State__c</fullName>
        <formula>Account__r.BillingState</formula>
        <label>Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account__r.RecordTypeId</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for case: 01480152</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Email Domains</relationshipLabel>
        <relationshipName>Email_Domains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientRegion__c</fullName>
        <formula>Account__r.Client_Region__c</formula>
        <label>Client Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_is_Active__c</fullName>
        <description>Created for: 01480152</description>
        <formula>ISPICKVAL(Account__r.Status__c, &quot;Active&quot;)</formula>
        <label>Client is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_Type__c</fullName>
        <description>Created for case: 01480152</description>
        <label>Domain Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Most Common</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Account__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <label>Email Domain</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Domain_Type__c</columns>
        <columns>ClientRegion__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>ClientRegion__c</field>
            <operation>notEqual</operation>
            <value>EMEA</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Email Domain</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_Enter_An_Email_Address</fullName>
        <active>false</active>
        <description>Created for: 01480152</description>
        <errorConditionFormula>OR(
NOT(Contains(Name, &quot;.&quot;)),
NOT(BEGINS(Name, &quot;@&quot;))
				)</errorConditionFormula>
        <errorMessage>Email domains must start with an @ symbol and contain a period.</errorMessage>
    </validationRules>
</CustomObject>